--- a/app/src/Monarch/Components/_Imports.razor
+++ b/app/src/Monarch/Components/_Imports.razor
@@ -6,5 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Microsoft.Data.SqlClient
 @using Monarch
 @using Monarch.Components
