--- a/app/src/Monarch/Components/Pages/Dashboard.razor
+++ b/app/src/Monarch/Components/Pages/Dashboard.razor
@@ -1,7 +1,5 @@
 @page "/"
 @using Monarch.Models
-@using Microsoft.AspNetCore.SignalR.Client
-@inject NavigationManager NavManager
 @rendermode InteractiveServer
 
 <PageTitle>Monarch</PageTitle>
@@ -38,29 +36,7 @@
     private string? draggingId;
     private string? dragOverId;
 
-    private HubConnection? hubConnection;
-
-    protected override async Task OnInitializedAsync()
-    {
-        hubConnection = new HubConnectionBuilder()
-            .WithUrl(NavManager.ToAbsoluteUri("/hubs/dashboard"))
-            .WithAutomaticReconnect()
-            .Build();
-
-        hubConnection.On("ApplicationsUpdated", async () =>
-        {
-            await LoadApplicationsAsync();  // re-get data (right now it's mock)
-            ApplySort();
-            StateHasChanged();
-        });
-
-        await hubConnection.StartAsync();
-        await LoadApplicationsAsync();
-        ApplySort();
-    }
-
-    private Task LoadApplicationsAsync()
-    {
+    protected override void OnInitialized(){
         // Mock data matching the Figma layout
         allApplications = Enumerable.Range(1, 20)
             .Select(i => new ApplicationStatus
@@ -75,16 +51,7 @@
                 }
             })
             .ToList();
-
-        return Task.CompletedTask;
-    }
-
-    public async ValueTask DisposeAsync()
-    {
-        if (hubConnection is not null)
-        {
-            await hubConnection.DisposeAsync();
-        }
+            ApplySort();
     }
 
     private void OnSortChanged(ChangeEventArgs e)
