Authentication via keycloak native auth working

--- a/app/src/Monarch/Components/_Imports.razor
+++ b/app/src/Monarch/Components/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.Data.SqlClient
 @using Monarch
 @using Monarch.Components
+@using Microsoft.AspNetCore.Authorization
+
+@attribute [Authorize]
