Documented all code that I developed

--- a/app/src/Monarch/Components/NavBar.razor
+++ b/app/src/Monarch/Components/NavBar.razor
@@ -28,6 +28,14 @@
     </div>
 </nav>
 
+@* 
+Brady Brown
+Mock admin card created
+    - Used to have an admin panel that is similar to the functional prototype
+    - Will be updated next semester
+    - Uses C# logic for HTML display and bootstrap styling
+*@
+
 @if (toggleAdmin)
 {
     <div class="admin-overlay" @onclick="CloseAdmin">
