--- a/app/src/Monarch/Components/Pages/Database.razor
+++ b/app/src/Monarch/Components/Pages/Database.razor
@@ -1,3 +1,12 @@
+@* 
+Brady Brown
+Test Connection for Database and frontend
+    - Used before dashboard layout was created to test database functionality
+    - Will be removed in later updates
+    - Uses an sqlconnectiono to display a simple table of the specified database
+*@
+
+
 @page "/database"
 
 <h3>Database Apps</h3>
